<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_thing_nametitle"
        android:id="@+id/viewThingNameText"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/view_thing_descriptiontext"
        android:id="@+id/viewThingDescriptionText"
        android:paddingLeft="40dp"
        android:paddingRight="0dp"
        android:paddingTop="10dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/view_thing_tagstext"
        android:id="@+id/viewThingTagsText"
        android:paddingTop="30dp"
        android:paddingLeft="0dp"
        android:layout_below="@+id/viewThingDescriptionText"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/viewThingImage"
        android:src="@mipmap/default_image"
        android:layout_below="@+id/viewThingNameText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/view_thing_descriptiontitle"
        android:id="@+id/textView9"
        android:layout_below="@+id/viewThingImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingLeft="20dp" />
</RelativeLayout>