<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customThingRowLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/thingIcon"
            android:src="@mipmap/default_image"
            android:padding="10dp"
            android:contentDescription="@string/image_content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/thing_name"
            android:id="@+id/thingName"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/thingIcon"
            android:layout_toEndOf="@+id/thingIcon"
            android:paddingTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/thing_description"
            android:id="@+id/thingDescription"
            android:paddingTop="0dp"
            android:paddingLeft="0dp"
            android:layout_below="@+id/thingName"
            android:layout_toRightOf="@+id/thingIcon"
            android:layout_toEndOf="@+id/thingIcon"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/thingTags"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/thingName"
            android:layout_toEndOf="@+id/thingName"
            android:layout_alignTop="@id/thingName"
            android:paddingTop="17dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp" />
    </RelativeLayout>
</LinearLayout>